# patient-x

./: .gitignore
parachains/: README.md
parachains/health-data-chain/: Cargo.toml
parachains/health-data-chain/node/: Cargo.toml
parachains/health-data-chain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
parachains/health-data-chain/pallets/access-control/: Cargo.toml
parachains/health-data-chain/pallets/access-control/src/: lib.rs
parachains/health-data-chain/pallets/encryption/: Cargo.toml
parachains/health-data-chain/pallets/encryption/src/: lib.rs
parachains/health-data-chain/pallets/health-records/: Cargo.toml
parachains/health-data-chain/pallets/health-records/src/: lib.rs
parachains/health-data-chain/pallets/ipfs-integration/: Cargo.toml
parachains/health-data-chain/pallets/ipfs-integration/src/: lib.rs
parachains/health-data-chain/runtime/: Cargo.toml
parachains/health-data-chain/runtime/src/: lib.rs
parachains/identity-consent-chain/: Cargo.toml
parachains/identity-consent-chain/node/: Cargo.toml
parachains/identity-consent-chain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
parachains/identity-consent-chain/pallets/authentication/: Cargo.toml
parachains/identity-consent-chain/pallets/authentication/src/: lib.rs  mock.rs  tests.rs
parachains/identity-consent-chain/pallets/consent-manager/: Cargo.toml
parachains/identity-consent-chain/pallets/consent-manager/src/: lib.rs  mock.rs  tests.rs
parachains/identity-consent-chain/pallets/identity-registry/: Cargo.toml
parachains/identity-consent-chain/pallets/identity-registry/src/: lib.rs  mock.rs  tests.rs
parachains/identity-consent-chain/runtime/: Cargo.toml
parachains/identity-consent-chain/runtime/src/: lib.rs
parachains/marketplace-chain/: Cargo.toml
parachains/marketplace-chain/node/: Cargo.toml
parachains/marketplace-chain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
parachains/marketplace-chain/pallets/analytics/: Cargo.toml
parachains/marketplace-chain/pallets/analytics/src/: lib.rs
parachains/marketplace-chain/pallets/data-listings/: Cargo.toml
parachains/marketplace-chain/pallets/data-listings/src/: lib.rs
parachains/marketplace-chain/pallets/marketplace/: Cargo.toml
parachains/marketplace-chain/pallets/marketplace/src/: lib.rs
parachains/marketplace-chain/pallets/reputation/: Cargo.toml
parachains/marketplace-chain/pallets/reputation/src/: lib.rs
parachains/marketplace-chain/runtime/: Cargo.toml
parachains/marketplace-chain/runtime/src/: lib.rs
parachains/scripts/: build-all.sh  clean-all.sh  launch-testnet.sh  run-all.sh  run.sh  setup.sh
