[package]
name = "identity-consent-node"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = { version = "0.4.21" }
codec = { workspace = true, features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.28"
serde_json = "1.0.114"

# Local
identity-consent-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", features = ["rococo-native"] }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
xcm = { workspace = true }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "cumulus-primitives-core/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "identity-consent-runtime/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "identity-consent-runtime/try-runtime",
    "polkadot-cli/try-runtime",
    "sp-runtime/try-runtime",
]
